[gd_scene load_steps=6 format=2]

[ext_resource path="res://text_interface/InputLabel.gd" type="Script" id=1]
[ext_resource path="res://text_interface/text_interface.gd" type="Script" id=2]
[ext_resource path="res://text_interface/winf_input.tres" type="DynamicFont" id=3]
[ext_resource path="res://text_interface/winf_output.tres" type="DynamicFont" id=4]
[ext_resource path="res://text_interface/RewriteLabel.gd" type="Script" id=5]

[node name="text_interface" type="MarginContainer"]
margin_left = 10.0
margin_top = 30.0
margin_right = 611.0
margin_bottom = 476.0
rect_min_size = Vector2( 190, 184 )
rect_clip_content = true
size_flags_horizontal = 3
script = ExtResource( 2 )

[node name="v" type="VBoxContainer" parent="."]
margin_right = 601.0
margin_bottom = 446.0
custom_constants/separation = 0

[node name="LookLb" type="Label" parent="v"]
margin_right = 601.0
margin_bottom = 11.0
size_flags_vertical = 2
custom_colors/font_color = Color( 0.231373, 0.258824, 0.0901961, 1 )
custom_fonts/font = ExtResource( 4 )
autowrap = true
script = ExtResource( 5 )

[node name="EventLb" type="Label" parent="v"]
margin_top = 142.0
margin_right = 601.0
margin_bottom = 153.0
size_flags_vertical = 2
custom_colors/font_color = Color( 0.231373, 0.258824, 0.0901961, 1 )
custom_fonts/font = ExtResource( 4 )
autowrap = true
max_lines_visible = 5
script = ExtResource( 5 )
done_expiry = 0

[node name="CastLb" type="Label" parent="v"]
margin_top = 285.0
margin_right = 601.0
margin_bottom = 296.0
size_flags_vertical = 2
custom_colors/font_color = Color( 0.231373, 0.258824, 0.0901961, 1 )
custom_fonts/font = ExtResource( 4 )
autowrap = true
script = ExtResource( 5 )
done_expiry = 60

[node name="InputLabel" type="Label" parent="v"]
margin_top = 428.0
margin_right = 601.0
margin_bottom = 446.0
size_flags_vertical = 12
custom_colors/font_color = Color( 0.231373, 0.258824, 0.0901961, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Testingtest"
align = 1
valign = 2
autowrap = true
script = ExtResource( 1 )
